--- a/products.html
+++ b/products.html
@@ -620,6 +620,11 @@
       <h3>Raw Cones</h3>
       <p>Pre-rolled cones and rolling papers</p>
     </div>
+        <div class="product-card scroll-animate">
+<img src="tabzs.png" alt=" Hydroxy Tablets">
+       <h3>Hydroxy Tablets</h3>
+       <p>hydroxy tablets for convenient and precise dosing</p>
+    </div>
   </div>
 
   <!-- Footer -->
