--- a/vapedevices.html
+++ b/vapedevices.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VapeCenter Tiffin Ave - Products</title>
+  <title>VapeCenter Tiffin Ave - Vape Devices</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     /* Base Styles */
@@ -75,6 +75,7 @@
       padding: 20px 40px;
       background: rgba(17, 17, 17, 0.9);
       backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px); /* Add this line */
       box-shadow: 0 8px 32px rgba(0, 140, 255, 0.1);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       position: sticky;
@@ -213,6 +214,7 @@
       background-clip: text;
     }
 
+
     /* Enhanced Page Title */
     .page-title {
       text-align: center;
@@ -244,17 +246,17 @@
       animation: fadeInUp 1s ease-out 0.5s both;
     }
 
-    /* Enhanced Products Grid */
-    .product-grid {
+    /* Vape Brand Cards */
+    .brands-grid {
       max-width: 1400px;
       margin: 0 auto 80px auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 30px;
       padding: 0 20px;
     }
 
-    .product-card {
+    .brand-card {
       background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
       padding: 30px;
       border-radius: 20px;
@@ -279,7 +281,7 @@
       }
     }
 
-    .product-card::before {
+    .brand-card::before {
       content: '';
       position: absolute;
       top: 0;
@@ -291,17 +293,17 @@
       transition: opacity 0.3s ease;
     }
 
-    .product-card:hover::before {
+    .brand-card:hover::before {
       opacity: 1;
     }
 
-    .product-card:hover {
+    .brand-card:hover {
       transform: translateY(-10px) scale(1.02);
       box-shadow: 0 20px 50px rgba(0, 140, 255, 0.2);
       border-color: rgba(0, 140, 255, 0.5);
     }
 
-    .product-card img {
+    .brand-card img {
       width: 100%;
       height: 200px;
       object-fit: cover;
@@ -310,18 +312,111 @@
       transition: transform 0.3s ease;
     }
 
-    .product-card:hover img {
+    .brand-card:hover img {
       transform: scale(1.05);
     }
 
-    .product-card h3 {
+    .brand-card h3 {
       font-size: 1.4rem;
       font-weight: 600;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       background: linear-gradient(45deg, #008cff, #00d4ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+    }
+
+    /* Flavor Button */
+    .flavor-button {
+      background: linear-gradient(45deg, #008cff, #00d4ff);
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 0.95rem;
+      transition: all 0.3s ease;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 15px;
+      text-decoration: none;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .flavor-button::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+      transition: left 0.6s ease;
+    }
+
+    .flavor-button:hover::before {
+      left: 100%;
+    }
+
+    .flavor-button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0, 140, 255, 0.3);
+      color: white;
+      text-decoration: none;
+    }
+
+    .flavor-button:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+      transform: none;
+    }
+
+    .flavor-button:disabled:hover {
+      transform: none;
+      box-shadow: none;
+    }
+
+    /* Flavor Display */
+    .flavors-display {
+      margin-top: 15px;
+      padding: 15px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      display: none;
+    }
+
+    .flavors-display h4 {
+      color: #008cff;
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+    }
+
+    .flavors-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 8px;
+    }
+
+    .flavor-item {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 8px;
+      border-radius: 5px;
+      text-align: center;
+      font-size: 0.9rem;
+      transition: all 0.3s ease;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .flavor-item:hover {
+      background: rgba(0, 140, 255, 0.2);
+      color: #00d4ff;
+      transform: translateY(-2px);
+      border-color: rgba(0, 140, 255, 0.5);
     }
 
     /* Enhanced Footer */
@@ -367,153 +462,6 @@
       transform: translateY(0);
     }
 
-    /* Mobile Navigation */
-    .mobile-menu-toggle {
-      display: none;
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 1.5rem;
-      cursor: pointer;
-      padding: 10px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .mobile-menu-toggle:hover {
-      background: rgba(0, 140, 255, 0.2);
-    }
-
-    .mobile-nav {
-      display: none;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      right: 0;
-      background: rgba(17, 17, 17, 0.95);
-      backdrop-filter: blur(20px);
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      z-index: 999;
-    }
-
-    .mobile-nav.active {
-      display: block;
-      animation: slideDown 0.3s ease-out;
-    }
-
-    .mobile-nav a {
-      display: block;
-      color: #fff;
-      padding: 15px 0;
-      font-size: 1.1rem;
-      font-weight: 600;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      transition: color 0.3s ease;
-    }
-
-    .mobile-nav a:hover {
-      color: #008cff;
-    }
-
-    .mobile-nav a:last-child {
-      border-bottom: none;
-    }
-
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      header {
-        padding: 15px 20px;
-        position: relative;
-      }
-
-      .header-left {
-        flex: 1;
-      }
-
-      .store-name {
-        font-size: 1.4rem;
-      }
-
-      .logo-img {
-        height: 50px;
-      }
-
-      .header-center {
-        display: none;
-      }
-
-      .header-right {
-        display: none;
-      }
-
-      .mobile-menu-toggle {
-        display: block;
-      }
-
-      .page-title {
-        font-size: 2.5rem;
-        padding: 60px 20px 30px 20px;
-      }
-
-      .product-grid {
-        grid-template-columns: 1fr;
-        gap: 20px;
-        padding: 0 15px;
-      }
-
-      .product-card {
-        padding: 20px;
-      }
-
-      .product-card img {
-        height: 150px;
-      }
-
-      .product-card h3 {
-        font-size: 1.2rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .page-title {
-        font-size: 2rem;
-      }
-
-      .store-name {
-        font-size: 1.2rem;
-      }
-
-      .logo-img {
-        height: 45px;
-      }
-
-      .product-card {
-        padding: 15px;
-      }
-
-      .product-card img {
-        height: 120px;
-      }
-    }
-
-    @media (max-width: 360px) {
-      .page-title {
-        font-size: 1.8rem;
-      }
-
-      .store-name {
-        font-size: 1.1rem;
-      }
-
-      .logo-img {
-        height: 40px;
-      }
-
-      .product-card img {
-        height: 100px;
-      }
-    }
   </style>
 </head>
 <body>
@@ -528,104 +476,52 @@
     </div>
     <nav class="header-center">
       <a href="index.html">Home</a>
-      <a href="#" style="background: rgba(0, 140, 255, 0.1);">Products</a>
+      <a href="products.html">Products</a>
       <a href="thcaproducts.html">THCA</a>
+      <a href="#" style="background: rgba(0, 140, 255, 0.1);">Vape Devices</a>
     </nav>
     <div class="header-right">
       <p><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
       <p><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
     </div>
-    <button class="mobile-menu-toggle" id="mobileMenuToggle">
-      <i class="fas fa-bars"></i>
-    </button>
-    <nav class="mobile-nav" id="mobileNav">
-      <a href="index.html">Home</a>
-      <a href="#" style="color: #008cff;">Products</a>
-      <a href="thcaproducts.html">THCA Products</a>
-      <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
-        <p style="color: #ddd; font-size: 0.9rem; margin-bottom: 8px;"><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
-        <p style="color: #ddd; font-size: 0.9rem;"><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
-      </div>
-    </nav>
   </header>
 
   <!-- Page Title -->
-  <h1 class="page-title scroll-animate">Our Premium Products</h1>
-  <p class="page-subtitle scroll-animate">Discover our carefully curated selection of high-quality vaping and smoking products</p>
+  <h1 class="page-title scroll-animate">Choose Your Vape Brand</h1>
+  <p class="page-subtitle scroll-animate">Select a brand to explore their extensive flavor collections</p>
 
-  <!-- Products Grid -->
-  <div class="product-grid">
-    <div class="product-card scroll-animate">
-      <a href="vapedevices.html" style="display: block; color: inherit;">
-        <img src="vapes.png" alt="Vapes">
-        <h3>Vape Devices</h3>
-        <p>High-quality vaping devices for every experience level</p>
+  <!-- Brand Selection Grid -->
+  <div class="brands-grid">
+    <div class="brand-card scroll-animate">
+      <h3>Lost Mary</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Discover our extensive collection of Lost Mary flavors</p>
+      <a href="lostmarry.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View Lost Mary Flavors
       </a>
     </div>
-    <div class="product-card scroll-animate">
-      <img src="tobacco.png" alt="Tobacco">
-      <h3>Premium Tobacco</h3>
-      <p>Finest tobacco products and accessories</p>
+
+    <div class="brand-card scroll-animate">
+      <h3>Razz</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Explore the vibrant world of Razz flavors</p>
+      <a href="razz.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View Razz Flavors
+      </a>
     </div>
-    <div class="product-card scroll-animate">
-      <img src="vaporizers.png" alt="Vaporizer">
-      <h3>Vaporizers</h3>
-      <p>Advanced vaporization technology</p>
+
+    <div class="brand-card scroll-animate">
+      <h3>North</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Experience the cool refreshment of North flavors</p>
+      <a href="north.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View North Flavors
+      </a>
     </div>
-    <div class="product-card scroll-animate">
-      <img src="bongs.png" alt="Bong">
-      <h3>Glass Bongs</h3>
-      <p>Premium glass water pipes and accessories</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="detox.png" alt="Detox">
-      <h3>Detox Products</h3>
-      <p>Cleansing and detoxification solutions</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="torches.png" alt="Torch">
-      <h3>Torches & Lighters</h3>
-      <p>Professional-grade heating tools</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="gummies.png" alt="Gummies">
-      <h3>Edible Gummies</h3>
-      <p>Premium edible products and treats</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="grinders.png" alt="Grinder">
-      <h3>Grinders</h3>
-      <p>High-quality grinding accessories</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="ashtray.png" alt="Ashtrays">
-      <h3>Ashtrays</h3>
-      <p>Stylish and functional ashtray collection</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="bangers.png" alt="Bangers">
-      <h3>Bangers</h3>
-      <p>Professional quartz bangers and nails</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="juice.png" alt="Juice">
-      <h3>E-Liquids</h3>
-      <p>Premium vape juice in various flavors</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="coils.png" alt="Coils">
-      <h3>Coils & Atomizers</h3>
-      <p>Replacement coils and atomizer heads</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="rawcones.png" alt="Raw Cones">
-      <h3>Raw Cones</h3>
-      <p>Pre-rolled cones and rolling papers</p>
-    </div>
-        <div class="product-card scroll-animate">
-<img src="tabzs.png" alt=" Hydroxy Tablets">
-       <h3>Hydroxy Tablets</h3>
-       <p>hydroxy tablets for convenient and precise dosing</p>
+
+    <div class="brand-card scroll-animate">
+      <h3>Foggers</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Dive into the cloud of Foggers flavors</p>
+      <a href="#" class="flavor-button" style="opacity: 0.6; cursor: not-allowed;">
+        <i class="fas fa-clock"></i> not finihed yet comin son.
+      </a>
     </div>
   </div>
 
@@ -653,38 +549,6 @@
     // Create particles
     setInterval(createParticle, 1000);
 
-    // Mobile menu functionality
-    const mobileMenuToggle = document.getElementById('mobileMenuToggle');
-    const mobileNav = document.getElementById('mobileNav');
-    const mobileNavLinks = mobileNav.querySelectorAll('a');
-
-    if (mobileMenuToggle && mobileNav) {
-      mobileMenuToggle.addEventListener('click', function() {
-        mobileNav.classList.toggle('active');
-        const icon = this.querySelector('i');
-        if (mobileNav.classList.contains('active')) {
-          icon.className = 'fas fa-times';
-        } else {
-          icon.className = 'fas fa-bars';
-        }
-      });
-
-      // Close mobile menu when clicking on a link
-      mobileNavLinks.forEach(link => {
-        link.addEventListener('click', function() {
-          mobileNav.classList.remove('active');
-          mobileMenuToggle.querySelector('i').className = 'fas fa-bars';
-        });
-      });
-
-      // Close mobile menu when clicking outside
-      document.addEventListener('click', function(e) {
-        if (!mobileMenuToggle.contains(e.target) && !mobileNav.contains(e.target)) {
-          mobileNav.classList.remove('active');
-          mobileMenuToggle.querySelector('i').className = 'fas fa-bars';
-        }
-      });
-    }
 
     // Scroll animations
     const observerOptions = {
@@ -704,11 +568,13 @@
       observer.observe(el);
     });
 
-    // Stagger product card animations
-    const productCards = document.querySelectorAll('.product-card');
-    productCards.forEach((card, index) => {
+    // Stagger brand card animations
+    const brandCards = document.querySelectorAll('.brand-card');
+    brandCards.forEach((card, index) => {
       card.style.animationDelay = `${index * 0.1}s`;
     });
+
   </script>
+
 </body>
 </html>
