--- a/vapedevices.html
+++ b/vapedevices.html
@@ -509,7 +509,7 @@
     </div>
 
     <div class="brand-card scroll-animate">
-      <h3>North</h3>
+      <h3>North 5000 Puffs</h3>
       <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Experience the cool refreshment of North flavors</p>
       <a href="north.html" class="flavor-button">
         <i class="fas fa-eye"></i> View North Flavors
@@ -517,10 +517,42 @@
     </div>
 
     <div class="brand-card scroll-animate">
-      <h3>Foggers</h3>
-      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Dive into the cloud of Foggers flavors</p>
-      <a href="#" class="flavor-button" style="opacity: 0.6; cursor: not-allowed;">
-        <i class="fas fa-clock"></i> not finihed yet comin son.
+      <h3>Off-Stamp</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Experience the bold and unique Off-Stamp flavors</p>
+      <a href="offstamp.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View Off-Stamp Flavors
+      </a>
+    </div>
+
+    <div class="brand-card scroll-animate">
+      <h3>iJoy</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Discover the innovative iJoy flavor collection</p>
+      <a href="ijoy.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View iJoy Flavors
+      </a>
+    </div>
+
+    <div class="brand-card scroll-animate">
+      <h3>Geek Bar</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Explore the tech-inspired Geek Bar flavors</p>
+      <a href="geekbar.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View Geek Bar Flavors
+      </a>
+    </div>
+
+    <div class="brand-card scroll-animate">
+      <h3>Fogger</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Experience the cool and refreshing Fogger flavors</p>
+      <a href="fogger.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View Fogger Flavors
+      </a>
+    </div>
+
+    <div class="brand-card scroll-animate">
+      <h3>Breeze</h3>
+      <p style="color: #aaa; margin-bottom: 20px; font-size: 1rem;">Discover the smooth and refreshing Breeze flavors</p>
+      <a href="breeze.html" class="flavor-button">
+        <i class="fas fa-eye"></i> View Breeze Flavors
       </a>
     </div>
   </div>
