--- a/ejuice.html
+++ b/ejuice.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VapeCenter Tiffin Ave - Products</title>
+  <title>VapeCenter Tiffin Ave - E-Liquid</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     /* Base Styles */
@@ -244,17 +244,17 @@
       animation: fadeInUp 1s ease-out 0.5s both;
     }
 
-    /* Enhanced Products Grid */
-    .product-grid {
+    /* Enhanced Categories Grid */
+    .categories-grid {
       max-width: 1400px;
       margin: 0 auto 80px auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
       gap: 30px;
       padding: 0 20px;
     }
 
-    .product-card {
+    .category-card {
       background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
       padding: 30px;
       border-radius: 20px;
@@ -279,7 +279,7 @@
       }
     }
 
-    .product-card::before {
+    .category-card::before {
       content: '';
       position: absolute;
       top: 0;
@@ -291,37 +291,73 @@
       transition: opacity 0.3s ease;
     }
 
-    .product-card:hover::before {
+    .category-card:hover::before {
       opacity: 1;
     }
 
-    .product-card:hover {
+    .category-card:hover {
       transform: translateY(-10px) scale(1.02);
-      box-shadow: 0 20px 50px rgba(0, 140, 255, 0.2);
-      border-color: rgba(0, 140, 255, 0.5);
+      box-shadow: 0 20px 40px rgba(0, 140, 255, 0.2);
     }
 
-    .product-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 15px;
-      margin-bottom: 20px;
-      transition: transform 0.3s ease;
-    }
-
-    .product-card:hover img {
-      transform: scale(1.05);
-    }
-
-    .product-card h3 {
-      font-size: 1.4rem;
-      font-weight: 600;
-      margin-bottom: 10px;
+    .category-card h3 {
+      font-size: 2.2rem;
+      margin-bottom: 15px;
       background: linear-gradient(45deg, #008cff, #00d4ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      font-weight: 700;
+    }
+
+    .category-card p {
+      color: #aaa;
+      margin-bottom: 25px;
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+
+    .flavors-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    .flavor-item {
+      background: linear-gradient(145deg, #2a2a2a, #1a1a1a);
+      padding: 12px 8px;
+      border-radius: 12px;
+      text-align: center;
+      color: #fff;
+      font-size: 0.9rem;
+      font-weight: 600;
+      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .flavor-item::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(0, 140, 255, 0.2), transparent);
+      transition: left 0.5s ease;
+    }
+
+    .flavor-item:hover::before {
+      left: 100%;
+    }
+
+    .flavor-item:hover {
+      background: linear-gradient(145deg, #008cff, #00d4ff);
+      transform: translateY(-3px) scale(1.05);
+      box-shadow: 0 8px 25px rgba(0, 140, 255, 0.4);
+      color: #fff;
     }
 
     /* Enhanced Footer */
@@ -347,24 +383,13 @@
     }
 
     @keyframes gradientShift {
-      0%, 100% {
-        opacity: 0.5;
-      }
-      50% {
-        opacity: 1;
-      }
+      0%, 100% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
     }
 
-    /* Scroll Animation */
-    .scroll-animate {
-      opacity: 0;
-      transform: translateY(50px);
-      transition: all 0.8s ease;
-    }
-
-    .scroll-animate.animate {
-      opacity: 1;
-      transform: translateY(0);
+    footer p {
+      margin: 5px 0;
+      color: #ddd;
     }
 
     /* Mobile Navigation */
@@ -427,24 +452,14 @@
         position: relative;
       }
 
-      .header-left {
-        flex: 1;
-      }
-
-      .store-name {
-        font-size: 1.4rem;
-      }
-
-      .logo-img {
-        height: 50px;
-      }
-
       .header-center {
         display: none;
       }
 
       .header-right {
-        display: none;
+        flex-direction: row;
+        align-items: center;
+        gap: 15px;
       }
 
       .mobile-menu-toggle {
@@ -456,83 +471,74 @@
         padding: 60px 20px 30px 20px;
       }
 
-      .product-grid {
+      .categories-grid {
         grid-template-columns: 1fr;
         gap: 20px;
         padding: 0 15px;
       }
 
-      .product-card {
-        padding: 20px;
+      .category-card {
+        padding: 25px 20px;
       }
 
-      .product-card img {
-        height: 150px;
+      .flavors-grid {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 8px;
       }
 
-      .product-card h3 {
-        font-size: 1.2rem;
+      .flavor-item {
+        padding: 10px 6px;
+        font-size: 0.85rem;
       }
     }
 
     @media (max-width: 480px) {
       .page-title {
         font-size: 2rem;
+        padding: 50px 15px 25px 15px;
       }
 
-      .store-name {
-        font-size: 1.2rem;
-      }
-
-      .logo-img {
-        height: 45px;
-      }
-
-      .product-card {
-        padding: 15px;
-      }
-
-      .product-card img {
-        height: 120px;
-      }
-    }
-
-    @media (max-width: 360px) {
-      .page-title {
-        font-size: 1.8rem;
-      }
-
-      .store-name {
+      .page-subtitle {
         font-size: 1.1rem;
+        margin-bottom: 40px;
       }
 
-      .logo-img {
-        height: 40px;
+      .categories-grid {
+        padding: 0 10px;
       }
 
-      .product-card img {
-        height: 100px;
+      .category-card {
+        padding: 20px 15px;
+      }
+
+      .flavors-grid {
+        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+        gap: 6px;
+      }
+
+      .flavor-item {
+        padding: 8px 4px;
+        font-size: 0.8rem;
       }
     }
   </style>
 </head>
 <body>
-  <!-- Animated Background Particles -->
   <div class="bg-particles"></div>
 
-  <!-- Header -->
   <header>
     <div class="header-left">
       <img src="logonobackground.png" alt="VapeCenter Logo" class="logo-img">
-      <span class="store-name">VapeCenter Tiffin Ave</span>
+      <div class="store-name">VapeCenter</div>
     </div>
-    <nav class="header-center">
+    <div class="header-center">
       <a href="index.html">Home</a>
-      <a href="#" style="background: rgba(0, 140, 255, 0.1);">Products</a>
-      <a href="thcaproducts.html">THCA</a>
-    </nav>
+      <a href="products.html">Products</a>
+      <a href="thcaproducts.html">THCA Products</a>
+      <a href="ejuice.html" style="color: #008cff;">E-Liquid</a>
+    </div>
     <div class="header-right">
-      <p><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
+      <div><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</div>
       <p><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
     </div>
     <button class="mobile-menu-toggle" id="mobileMenuToggle">
@@ -540,8 +546,10 @@
     </button>
     <nav class="mobile-nav" id="mobileNav">
       <a href="index.html">Home</a>
-      <a href="#" style="color: #008cff;">Products</a>
+      <a href="products.html">Products</a>
       <a href="thcaproducts.html">THCA Products</a>
+      <a href="vapedevices.html">Vape Devices</a>
+      <a href="ejuice.html" style="color: #008cff;">E-Liquid</a>
       <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
         <p style="color: #ddd; font-size: 0.9rem; margin-bottom: 8px;"><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
         <p style="color: #ddd; font-size: 0.9rem;"><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
@@ -549,83 +557,50 @@
     </nav>
   </header>
 
-  <!-- Page Title -->
-  <h1 class="page-title scroll-animate">Our Premium Products</h1>
-  <p class="page-subtitle scroll-animate">Discover our carefully curated selection of high-quality vaping and smoking products</p>
+  <h1 class="page-title">E-Liquid Brands</h1>
+  <p class="page-subtitle">Choose from our premium collection of freebase and saltnic e-liquid brands</p>
 
-  <!-- Products Grid -->
-  <div class="product-grid">
-    <div class="product-card scroll-animate">
-      <a href="vapedevices.html" style="display: block; color: inherit;">
-        <img src="vapes.png" alt="Vapes">
-        <h3>Vape Devices</h3>
-        <p>High-quality vaping devices for every experience level</p>
-      </a>
+  <div class="categories-grid">
+    <div class="category-card">
+      <h3>Freebase E-Liquid Brands</h3>
+      <p>Traditional e-liquids with higher VG content for cloud production</p>
+      <div class="flavors-grid">
+        <div class="flavor-item">7 Daze MFG</div>
+        <div class="flavor-item">Bam's Cannoli</div>
+        <div class="flavor-item">BLVK</div>
+        <div class="flavor-item">Candy King</div>
+        <div class="flavor-item">Cloud Nurdz</div>
+        <div class="flavor-item">Coastal Clouds</div>
+        <div class="flavor-item">Cuttwood</div>
+        <div class="flavor-item">Glas</div>
+        <div class="flavor-item">Hi-Drip</div>
+        <div class="flavor-item">Innevape E-Liquids</div>
+        <div class="flavor-item">Johnny Creampuff</div>
+        <div class="flavor-item">Juice Head</div>
+        <div class="flavor-item">Naked 100</div>
+        <div class="flavor-item">ORGNX</div>
+        <div class="flavor-item">Skwezed</div>
+        <div class="flavor-item">Suicide Bunny</div>
+        <div class="flavor-item">The One</div>
+        <div class="flavor-item">Vapetasia</div>
+        <div class="flavor-item">VGOD</div>
+        <div class="flavor-item">Yami Vapor</div>
+      </div>
     </div>
-    <div class="product-card scroll-animate">
-      <img src="tobacco.png" alt="Tobacco">
-      <h3>Premium Tobacco</h3>
-      <p>Finest tobacco products and accessories</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="vaporizers.png" alt="Vaporizer">
-      <h3>Vaporizers</h3>
-      <p>Advanced vaporization technology</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="bongs.png" alt="Bong">
-      <h3>Glass Bongs</h3>
-      <p>Premium glass water pipes and accessories</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="detox.png" alt="Detox">
-      <h3>Detox Products</h3>
-      <p>Cleansing and detoxification solutions</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="torches.png" alt="Torch">
-      <h3>Torches & Lighters</h3>
-      <p>Professional-grade heating tools</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="thcagummies.png" alt="Gummies">
-      <h3>Edible Gummies</h3>
-      <p>Premium edible products and treats</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="grinders.png" alt="Grinder">
-      <h3>Grinders</h3>
-      <p>High-quality grinding accessories</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="ashtray.png" alt="Ashtrays">
-      <h3>Ashtrays</h3>
-      <p>Stylish and functional ashtray collection</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="bangers.png" alt="Bangers">
-      <h3>Bangers</h3>
-      <p>Professional quartz bangers and nails</p>
-    </div>
-    <a href="ejuice.html" class="product-card scroll-animate">
-      <img src="juice.png" alt="Juice">
-      <h3>E-Liquids</h3>
-      <p>Premium vape juice in various flavors</p>
-    </a>
-    <div class="product-card scroll-animate">
-      <img src="coils.png" alt="Coils">
-      <h3>Coils & Atomizers</h3>
-      <p>Replacement coils and atomizer heads</p>
-    </div>
-    <div class="product-card scroll-animate">
-      <img src="rawcones.png" alt="Raw Cones">
-      <h3>Raw Cones</h3>
-      <p>Pre-rolled cones and rolling papers</p>
-    </div>
-        <div class="product-card scroll-animate">
-<img src="tabzs.png" alt=" Hydroxy Tablets">
-       <h3>Hydroxy Tablets</h3>
-       <p>hydroxy tablets for convenient and precise dosing</p>
+
+    <div class="category-card">
+      <h3>SaltNic E-Liquid Brands</h3>
+      <p>Nicotine salt e-liquids for smoother throat hit and faster absorption</p>
+      <div class="flavors-grid">
+        <div class="flavor-item">7 Daze MFG</div>
+        <div class="flavor-item">Juice Head</div>
+        <div class="flavor-item">Naked 100 (NKD 100 Salt Nic)</div>
+        <div class="flavor-item">ORGNX</div>
+        <div class="flavor-item">The Finest E-Liquid</div>
+        <div class="flavor-item">Aqua</div>
+        <div class="flavor-item">Pod Juice</div>
+        <div class="flavor-item">Cloud Nurdz</div>
+      </div>
     </div>
   </div>
 
@@ -644,14 +619,12 @@
       particle.style.animationDelay = Math.random() * 15 + 's';
       particle.style.animationDuration = (Math.random() * 10 + 15) + 's';
       document.querySelector('.bg-particles').appendChild(particle);
-
-      setTimeout(() => {
-        particle.remove();
-      }, 25000);
     }
 
     // Create particles
-    setInterval(createParticle, 1000);
+    for (let i = 0; i < 30; i++) {
+      setTimeout(createParticle, i * 200);
+    }
 
     // Mobile menu functionality
     const mobileMenuToggle = document.getElementById('mobileMenuToggle');
@@ -685,30 +658,6 @@
         }
       });
     }
-
-    // Scroll animations
-    const observerOptions = {
-      threshold: 0.1,
-      rootMargin: '0px 0px -50px 0px'
-    };
-
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('animate');
-        }
-      });
-    }, observerOptions);
-
-    document.querySelectorAll('.scroll-animate').forEach(el => {
-      observer.observe(el);
-    });
-
-    // Stagger product card animations
-    const productCards = document.querySelectorAll('.product-card');
-    productCards.forEach((card, index) => {
-      card.style.animationDelay = `${index * 0.1}s`;
-    });
   </script>
 </body>
 </html>
