--- a/vaporizers.html
+++ b/vaporizers.html
@@ -720,17 +720,17 @@
           <div class="product-type">Dry Herb</div>
         </div>
         <div class="product-item">
-          <img src="crafty plus.png" alt="Crafty Plus" class="product-image">
+          <img src="craftyplus.png" alt="Crafty Plus" class="product-image">
           <div class="product-name">Crafty Plus</div>
           <div class="product-type">Dry Herb</div>
         </div>
         <div class="product-item">
-          <img src="davinci iq3.png" alt="Davinci IQ3" class="product-image">
+          <img src="DavinciIQ3.png" alt="Davinci IQ3" class="product-image">
           <div class="product-name">Davinci IQ3</div>
           <div class="product-type">Dry Herb</div>
         </div>
         <div class="product-item">
-          <img src="potv lobo.png" alt="POTV Lobo" class="product-image">
+          <img src="potvlobo.png" alt="POTV Lobo" class="product-image">
           <div class="product-name">POTV Lobo</div>
           <div class="product-type">Dry Herb</div>
         </div>
@@ -740,7 +740,7 @@
           <div class="product-type">Dry Herb</div>
         </div>
         <div class="product-item">
-          <img src="mighty plus.png" alt="Mighty Plus" class="product-image">
+          <img src="mightyplus.png" alt="Mighty Plus" class="product-image">
           <div class="product-name">Mighty Plus</div>
           <div class="product-type">Dry Herb</div>
         </div>
@@ -757,17 +757,17 @@
       <p>Electric nectar collectors and dab rigs for concentrate consumption</p>
       <div class="products-grid">
         <div class="product-item">
-          <img src="Unicorn 2.0.png" alt="Unicorn 2.0" class="product-image">
+          <img src="Unicorn2.png" alt="Unicorn 2.0" class="product-image">
           <div class="product-name">Unicorn 2.0</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="unicorn mini.png" alt="Unicorn Mini" class="product-image">
+          <img src="unicornmini.png" alt="Unicorn Mini" class="product-image">
           <div class="product-name">Unicorn Mini</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="dragon egg.png" alt="Dragon Egg" class="product-image">
+          <img src="dragonegg.png" alt="Dragon Egg" class="product-image">
           <div class="product-name">Dragon Egg</div>
           <div class="product-type">Dab</div>
         </div>
@@ -777,7 +777,7 @@
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="octopus mini.png" alt="Octopus Mini" class="product-image">
+          <img src="octopusmini.png" alt="Octopus Mini" class="product-image">
           <div class="product-name">Octopus Mini</div>
           <div class="product-type">Dab</div>
         </div>
