--- a/vaporizers.html
+++ b/vaporizers.html
@@ -720,7 +720,7 @@
           <div class="product-type">Dry Herb</div>
         </div>
         <div class="product-item">
-          <img src="craftyplus.png" alt="Crafty Plus" class="product-image">
+          <img src="CraftyPlus.png" alt="Crafty Plus" class="product-image">
           <div class="product-name">Crafty Plus</div>
           <div class="product-type">Dry Herb</div>
         </div>
@@ -897,3 +897,4 @@
   </script>
 </body>
 </html>
+
