--- a/vaporizers.html
+++ b/vaporizers.html
@@ -730,7 +730,7 @@
           <div class="product-type">Dry Herb</div>
         </div>
         <div class="product-item">
-          <img src="potvlobo.png" alt="POTV Lobo" class="product-image">
+          <img src="POTVLobo.png" alt="POTV Lobo" class="product-image">
           <div class="product-name">POTV Lobo</div>
           <div class="product-type">Dry Herb</div>
         </div>
@@ -740,7 +740,7 @@
           <div class="product-type">Dry Herb</div>
         </div>
         <div class="product-item">
-          <img src="mightyplus.png" alt="Mighty Plus" class="product-image">
+          <img src="MightyPlus.png" alt="Mighty Plus" class="product-image">
           <div class="product-name">Mighty Plus</div>
           <div class="product-type">Dry Herb</div>
         </div>
@@ -762,37 +762,37 @@
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="unicornmini.png" alt="Unicorn Mini" class="product-image">
+          <img src="UnicornMini.png" alt="Unicorn Mini" class="product-image">
           <div class="product-name">Unicorn Mini</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="dragonegg.png" alt="Dragon Egg" class="product-image">
+          <img src="DragonEgg.png" alt="Dragon Egg" class="product-image">
           <div class="product-name">Dragon Egg</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="dinosaur.png" alt="Dinosaur" class="product-image">
+          <img src="Dinosaur.png" alt="Dinosaur" class="product-image">
           <div class="product-name">Dinosaur</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="octopusmini.png" alt="Octopus Mini" class="product-image">
+          <img src="OctopusMini.png" alt="Octopus Mini" class="product-image">
           <div class="product-name">Octopus Mini</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="electricnectarcollectors.png" alt="Electric Nectar Collectors" class="product-image">
+          <img src="ElectricNectarCollectors.png" alt="Electric Nectar Collectors" class="product-image">
           <div class="product-name">Electric Nectar Collectors</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="seahorseseries.png" alt="Seahorse Series" class="product-image">
+          <img src="SeahorseSeries.png" alt="Seahorse Series" class="product-image">
           <div class="product-name">Seahorse Series</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="seahorseproplus.png" alt="Seahorse Pro Plus" class="product-image">
+          <img src="SeahorseProPlus.png" alt="Seahorse Pro Plus" class="product-image">
           <div class="product-name">Seahorse Pro Plus</div>
           <div class="product-type">Dab</div>
         </div>
@@ -802,37 +802,37 @@
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="seahorseking.png" alt="Seahorse King" class="product-image">
+          <img src="SeahorseKing.png" alt="Seahorse King" class="product-image">
           <div class="product-name">Seahorse King</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="giraffe.png" alt="Giraffe" class="product-image">
+          <img src="Giraffe.png" alt="Giraffe" class="product-image">
           <div class="product-name">Giraffe</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="whale.png" alt="Whale" class="product-image">
+          <img src="Whale.png" alt="Whale" class="product-image">
           <div class="product-name">Whale</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="seahorsequeen.png" alt="Seahorse Queen" class="product-image">
+          <img src="SeahorseQueen.png" alt="Seahorse Queen" class="product-image">
           <div class="product-name">Seahorse Queen</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="peakpro.png" alt="Peak Pro" class="product-image">
+          <img src="PeakPro.png" alt="Peak Pro" class="product-image">
           <div class="product-name">Peak Pro</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="peak.png" alt="Peak" class="product-image">
+          <img src="Peak.png" alt="Peak" class="product-image">
           <div class="product-name">Peak</div>
           <div class="product-type">Dab</div>
         </div>
         <div class="product-item">
-          <img src="proxy.png" alt="Proxy" class="product-image">
+          <img src="Proxy.png" alt="Proxy" class="product-image">
           <div class="product-name">Proxy</div>
           <div class="product-type">Dab</div>
         </div>
@@ -897,4 +897,5 @@
   </script>
 </body>
 </html>
+
 
