--- a/vapedevices.html
+++ b/vapedevices.html
@@ -214,6 +214,59 @@
       background-clip: text;
     }
 
+    /* Mobile Navigation */
+    .mobile-menu-toggle {
+      display: none;
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 1.5rem;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .mobile-menu-toggle:hover {
+      background: rgba(0, 140, 255, 0.2);
+    }
+
+    .mobile-nav {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: rgba(17, 17, 17, 0.95);
+      backdrop-filter: blur(20px);
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      z-index: 999;
+    }
+
+    .mobile-nav.active {
+      display: block;
+      animation: slideDown 0.3s ease-out;
+    }
+
+    .mobile-nav a {
+      display: block;
+      color: #fff;
+      padding: 15px 0;
+      font-size: 1.1rem;
+      font-weight: 600;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      transition: color 0.3s ease;
+    }
+
+    .mobile-nav a:hover {
+      color: #008cff;
+    }
+
+    .mobile-nav a:last-child {
+      border-bottom: none;
+    }
+
 
     /* Enhanced Page Title */
     .page-title {
@@ -462,6 +515,168 @@
       transform: translateY(0);
     }
 
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header {
+        padding: 15px 20px;
+        position: relative;
+      }
+
+      .header-left {
+        flex: 1;
+      }
+
+      .store-name {
+        font-size: 1.4rem;
+      }
+
+      .logo-img {
+        height: 50px;
+      }
+
+      .header-center {
+        display: none;
+      }
+
+      .header-right {
+        display: none;
+      }
+
+      .mobile-menu-toggle {
+        display: block;
+      }
+
+      .page-title {
+        font-size: 2.5rem;
+        padding: 60px 20px 30px 20px;
+      }
+
+      .page-subtitle {
+        font-size: 1.1rem;
+        margin-bottom: 40px;
+        padding: 0 20px;
+      }
+
+      .brands-grid {
+        grid-template-columns: 1fr;
+        gap: 20px;
+        padding: 0 15px;
+      }
+
+      .brand-card {
+        padding: 25px 20px;
+      }
+
+      .brand-card h3 {
+        font-size: 1.2rem;
+      }
+
+      .brand-card p {
+        font-size: 0.95rem;
+      }
+
+      .brand-card img {
+        height: 150px;
+      }
+
+      .flavor-button {
+        padding: 10px 16px;
+        font-size: 0.9rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .page-title {
+        font-size: 2rem;
+        padding: 50px 15px 25px 15px;
+      }
+
+      .page-subtitle {
+        font-size: 1rem;
+        margin-bottom: 30px;
+        padding: 0 15px;
+      }
+
+      .store-name {
+        font-size: 1.2rem;
+      }
+
+      .logo-img {
+        height: 45px;
+      }
+
+      .brands-grid {
+        padding: 0 10px;
+      }
+
+      .brand-card {
+        padding: 20px 15px;
+      }
+
+      .brand-card h3 {
+        font-size: 1.1rem;
+      }
+
+      .brand-card p {
+        font-size: 0.9rem;
+      }
+
+      .brand-card img {
+        height: 120px;
+      }
+
+      .flavor-button {
+        padding: 8px 14px;
+        font-size: 0.85rem;
+      }
+    }
+
+    @media (max-width: 360px) {
+      .page-title {
+        font-size: 1.8rem;
+        padding: 40px 10px 20px 10px;
+      }
+
+      .page-subtitle {
+        font-size: 0.95rem;
+        margin-bottom: 25px;
+        padding: 0 10px;
+      }
+
+      .store-name {
+        font-size: 1.1rem;
+      }
+
+      .logo-img {
+        height: 40px;
+      }
+
+      .brands-grid {
+        padding: 0 5px;
+      }
+
+      .brand-card {
+        padding: 15px 10px;
+      }
+
+      .brand-card h3 {
+        font-size: 1rem;
+      }
+
+      .brand-card p {
+        font-size: 0.85rem;
+      }
+
+      .brand-card img {
+        height: 100px;
+      }
+
+      .flavor-button {
+        padding: 6px 12px;
+        font-size: 0.8rem;
+      }
+    }
+
   </style>
 </head>
 <body>
@@ -472,18 +687,35 @@
   <header>
     <div class="header-left">
       <img src="logonobackground.png" alt="VapeCenter Logo" class="logo-img">
-      <span class="store-name">VapeCenter Tiffin Ave</span>
+      <span class="store-name">VapeCenter</span>
     </div>
     <nav class="header-center">
       <a href="index.html">Home</a>
       <a href="products.html">Products</a>
-      <a href="thcaproducts.html">THCA</a>
-      <a href="#" style="background: rgba(0, 140, 255, 0.1);">Vape Devices</a>
+      <a href="thcaproducts.html">THCA Products</a>
+      <a href="vapedevices.html" style="color: #008cff;">Vape Devices</a>
+      <a href="ejuice.html">E-Liquid</a>
+      <a href="vaporizers.html">Vaporizers</a>
     </nav>
     <div class="header-right">
-      <p><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
+      <div><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</div>
       <p><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
     </div>
+    <button class="mobile-menu-toggle" id="mobileMenuToggle">
+      <i class="fas fa-bars"></i>
+    </button>
+    <nav class="mobile-nav" id="mobileNav">
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="thcaproducts.html">THCA Products</a>
+      <a href="vapedevices.html" style="color: #008cff;">Vape Devices</a>
+      <a href="ejuice.html">E-Liquid</a>
+      <a href="vaporizers.html">Vaporizers</a>
+      <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.2);">
+        <p style="color: #ddd; font-size: 0.9rem; margin-bottom: 8px;"><strong>Location:</strong> 2028 Tiffin Ave, Findlay, OH 45840</p>
+        <p style="color: #ddd; font-size: 0.9rem;"><strong>Hours:</strong> 8:00 AM - 12:00 AM | Every Day</p>
+      </div>
+    </nav>
   </header>
 
   <!-- Page Title -->
@@ -605,6 +837,39 @@
     brandCards.forEach((card, index) => {
       card.style.animationDelay = `${index * 0.1}s`;
     });
+
+    // Mobile menu functionality
+    const mobileMenuToggle = document.getElementById('mobileMenuToggle');
+    const mobileNav = document.getElementById('mobileNav');
+    const mobileNavLinks = mobileNav.querySelectorAll('a');
+
+    if (mobileMenuToggle && mobileNav) {
+      mobileMenuToggle.addEventListener('click', function() {
+        mobileNav.classList.toggle('active');
+        const icon = this.querySelector('i');
+        if (mobileNav.classList.contains('active')) {
+          icon.className = 'fas fa-times';
+        } else {
+          icon.className = 'fas fa-bars';
+        }
+      });
+
+      // Close mobile menu when clicking on a link
+      mobileNavLinks.forEach(link => {
+        link.addEventListener('click', function() {
+          mobileNav.classList.remove('active');
+          mobileMenuToggle.querySelector('i').className = 'fas fa-bars';
+        });
+      });
+
+      // Close mobile menu when clicking outside
+      document.addEventListener('click', function(e) {
+        if (!mobileMenuToggle.contains(e.target) && !mobileNav.contains(e.target)) {
+          mobileNav.classList.remove('active');
+          mobileMenuToggle.querySelector('i').className = 'fas fa-bars';
+        }
+      });
+    }
 
   </script>
 
