--- a/index.html
+++ b/index.html
@@ -1407,5 +1407,11 @@
       card.style.animationDelay = `${index * 0.2}s`;
     });
   </script>
+  
+  <!-- Vercel Analytics -->
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
