--- a/products.html
+++ b/products.html
@@ -710,5 +710,11 @@
       card.style.animationDelay = `${index * 0.1}s`;
     });
   </script>
+  
+  <!-- Vercel Analytics -->
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
