--- a/topshelf.html
+++ b/topshelf.html
@@ -405,5 +405,11 @@
             </div>
         </div>
     </div>
+    
+    <!-- Vercel Analytics -->
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
