--- a/vapedevices.html
+++ b/vapedevices.html
@@ -873,5 +873,10 @@
 
   </script>
 
+  <!-- Vercel Analytics -->
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
